--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div class="start-div">
         <ion-icon name="logo-instagram"></ion-icon>
         <div class="barra_vertical"></div>
-        <img src="img/logo.png" class="logo" alt="">
+        <div class="logo-div"><img src="img/logo.png" class="logo" alt=""></div>
       </div>
       <input type="text" class="search" placeholder="Pesquisar">
       <div class="menu-items">
-        <ion-icon name="paper-plane-outline"></ion-icon>
-        <ion-icon name="compass-outline"></ion-icon>
-        <ion-icon name="heart-outline"></ion-icon>
-        <ion-icon name="person-outline"></ion-icon>
+        <ion-icon name="paper-plane-outline" class="dm-icon"></ion-icon>
+        <ion-icon name="compass-outline" class="vector-icon"></ion-icon>
+        <ion-icon name="heart-outline" class="activity-icon"></ion-icon>
+        <ion-icon name="person-outline" class="account-icon"></ion-icon>
       </div>
     </div>
   </nav>
@@ -199,6 +199,13 @@
           </div>
         </div>
       </aside>
+      <div class="navbar2">
+        <ion-icon name="home"></ion-icon>
+        <ion-icon name="search-outline"></ion-icon>
+        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-icon name="heart-outline" class="activity-icon"></ion-icon>
+        <ion-icon name="person-outline"></ion-icon>
+      </div>
     </section>
   </main>
 
